--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 
-spring.data.mongodb.uri=mongodb+srv://user132123:pass3213211@tabletenniscluster.c5nfy.mongodb.net/tableTennisDatabase
+spring.data.mongodb.uri=mongodb+srv://realuser:realpass123@tabletenniscluster.c5nfy.mongodb.net/tableTennisDatabase
 
